--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PNR Status (Check IRCTC PNR Status) - ConfirmTkt </title>
-    <link rel="icon" href="../images/confirm-favicon.ico">
-    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="pnr.css">
-
-
-
+    <link rel="icon" href="images/confirm-favicon.ico">
+    <link rel="stylesheet" href="pnr_status.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <header>
         <div class="header-logo">
-            <img src="../images/cnfm-logo.png" alt="">
+            <img src="images/cnfm-logo.png" alt="">
         </div>
         <nav class="header-nav">
             <ol>
@@ -49,7 +45,7 @@
                 <div class="platform-details">
                     <div class="platform-row">
                         <div class="platform-row-col">
-                            <img src="../images/train-ticket.png">
+                            <img src="images/train-ticket.png">
                             <div>
                                 <h2>PNR Status of IRCTC Train Tickets</h2>
                                 <p>
@@ -60,7 +56,7 @@
                             </div>
                         </div>
                         <div class="platform-row-col">
-                            <img src="../images/payment.png">
+                            <img src="images/payment.png">
                             <div>
                                 <h2>UPI Enabled Secured Payment</h2>
                                 <p>
@@ -70,10 +66,9 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="platform-row">
                         <div class="platform-row-col">
-                            <img src="../images/irctc-tickets.png">
+                            <img src="images/irctc-tickets.png">
                             <div>
                                 <h2>Free Cancellation on IRCTC Tickets</h2>
                                 <p>
@@ -85,7 +80,7 @@
                             </div>
                         </div>
                         <div class="platform-row-col">
-                            <img src="../images/support.png">
+                            <img src="images/support.png">
                             <div>
                                 <h2>IRCTC Booking & PNR Enquiry Support</h2>
                                 <p>
@@ -97,10 +92,9 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="platform-row">
                         <div class="platform-row-col">
-                            <img src="../images/cancellation.png">
+                            <img src="images/cancellation.png">
                             <div>
                                 <h2> IRCTC Instant Refund & Cancellation</h2>
                                 <p>
@@ -109,7 +103,7 @@
                             </div>
                         </div>
                         <div class="platform-row-col">
-                            <img src="../images/tracking.png">
+                            <img src="images/tracking.png">
                             <div>
                                 <h2>Live Train Status Tracking</h2>
                                 <p>
@@ -124,18 +118,16 @@
                     </div>
                 </div>
             </div>
-
             <div class="mobile-view">
-                <img src="../images/mobile_app_view.png" class="mobile">
+                <img src="images/mobile_app_view.png" class="mobile">
                 <div>
-                    <img src="../images/mobile-view-bg.png" class="mobile-view-bg">
+                    <img src="images/mobile-view-bg.png" class="mobile-view-bg">
                     <span class="mobile-os">
-                        <img src="../images/google-play-badge.png">
-                        <img src="../images/app-ios-badge.png">
+                        <img src="images/google-play-badge.png">
+                        <img src="images/app-ios-badge.png">
                     </span>
                 </div>
             </div>
-
             <div class="faqs">
                 <div class="faq">
                     <h3>What are the Top Features of Confirmtkt PNR Status?</h3>
@@ -147,7 +139,6 @@
                         <span>PNR chart prepared information and last-moment updates directly delivered to your Mobile
                             App(Install ConfirmTkt APP)</span>
                     </p>
-
                 </div>
                 <div class="faq">
                     <h3>Check PNR status and waitlist PNR prediction of IRCTC</h3>
@@ -175,7 +166,6 @@
 
                         <span>We have upgraded our servers to handle the festival rush. So that our users can check
                             their <strong>PNR status</strong> fast and seamless.
-
                         </span>
                     </p>
                 </div>
@@ -242,7 +232,6 @@
                         enter the PNR number in the search bar and the results of the search are mostly the following
                         details:
                     </p>
-                    
                     <h5>Passenger and Ticket Details:</h5>
                     <p>
                     <span>Information about the passenger such as their Name, Age, Gender, and Berth Preference</span>
@@ -250,7 +239,6 @@
                     <span>Ticket status showing CNF, RAC, or WL (these terms have been explained in detail below)</span>
                     <span>It mentions the coach and berth number</span>
                     </p>
-                    
                     <h5>Payment and Train Details:</h5>
                     <p>
                         <span>Reveals how much you paid for the ticket including the transaction id and the mode of payment
@@ -279,9 +267,6 @@
                         <span>CAN – Ticket Cancelled.</span>
                     </p>
                 </div>
-
-
-
             </div>
         </main>
     </section>
@@ -289,9 +274,8 @@
     <footer>
         <div class="footer-confirm">
             <div class="footer-confirm-title">
-                <img src="../images/cnfm-logo.png" >
-                <p>
-                    Confirmtkt.com is official partner of IRCTC to book IRCTC train tickets and Railway train enquiry
+                <img src="images/cnfm-logo.png" >
+                <p>Confirmtkt.com is official partner of IRCTC to book IRCTC train tickets and Railway train enquiry</p>
             </div>
             <div class="footer-confirm-details">
                 <div>
@@ -332,21 +316,16 @@
                 </div>
                 <div class="footer-social">
                     <h5>Follow us</h5>
-                    <img src="../images/Instagram.svg">
-                    <img src="../images/facebook.svg">
-                    <img src="../images/twitter.svg">
+                    <img src="images/Instagram.svg">
+                    <img src="images/facebook.svg">
+                    <img src="images/twitter.svg">
                 </div>
             </div>
-
         </div>
-
         <hr class="footer-hr">
-
         <div class="footer-copyRight">
             © Copyright @ Le Travenues Technology Ltd. All Rights Reserved.
         </div>
     </footer>
-
 </body>
-
 </html>
