--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </dt>
                     <dd>
                         <input type="text" placeholder="Enter 10 digit PNR Number" id="pnr-status-ip" pattern="[\d]{10}" maxlength="10" required name="pnr-status-ip" title="Ten digit PNR number">
-                        <button class="pnr-status-button btn btn-success" onclick="clickPnr()">Check PNR Status</button>
+                        <button class="pnr-status-button" onclick="clickPnr()">Check PNR Status</button>
                     </dd>
                 </dl>
             </form>
