--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PNR Status (Check IRCTC PNR Status) - ConfirmTkt </title>
     <link rel="icon" href="images/confirm-favicon.ico">
+    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="pnr_status.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -33,7 +38,8 @@
                         <h1>PNR Status</h1>
                     </dt>
                     <dd>
-                        <input type="text" placeholder="Enter 10 digit PNR Number" id="pnr-status-ip" pattern="[\d]{10}" maxlength="10" required name="pnr-status-ip" title="Ten digit PNR number">
+                        <input type="text" placeholder="Enter 10 digit PNR Number" id="pnr-status-ip" pattern="[\d]{10}"
+                            maxlength="10" required name="pnr-status-ip" title="Ten digit PNR number">
                         <button class="pnr-status-button" onclick="clickPnr()">Check PNR Status</button>
                     </dd>
                 </dl>
@@ -163,8 +169,8 @@
                         During festivals rush like Holi, Durga pooja, Diwali, Chhath, Eid, Christmas, you can explore
                         ConfirmTkt same train alternates feature to find confirm ticket to your destination. After which
                         you can instantly book and check the PNR STATUS on Confirmtkt App or Website.
-
-                        <span>We have upgraded our servers to handle the festival rush. So that our users can check
+                        <span>
+                            We have upgraded our servers to handle the festival rush. So that our users can check
                             their <strong>PNR status</strong> fast and seamless.
                         </span>
                     </p>
@@ -209,13 +215,10 @@
                     <h3>PNR Status Confirmation of different waitlist tickets </h3>
                     <p>
                         <span>GNWL (General Waiting List) - Highest confirmation chances</span>
-                        <span>CKWL (Tatkal Waiting List) - GNWL tickets are preferred over Tatkal tickets hence CKWL
-                            Confirmation chances are low compared to GNWL</span>
+                        <span>CKWL (Tatkal Waiting List) - GNWL tickets are preferred over Tatkal tickets hence CKWL Confirmation chances are low compared to GNWL</span>
                         <span>RLWL (Remote Location Waiting List) - Less chances of confirmation</span>
-                        <span>PQWL (Pooled Quota Waiting List) - Less chances of confirmation, quota shared between
-                            several stations </span>
-                        <span>RLGN (Remote Location General Waiting List) - Less chances of confirmation, when user
-                            books ticket under RLWL</span>
+                        <span>PQWL (Pooled Quota Waiting List) - Less chances of confirmation, quota shared between several stations </span>
+                        <span>RLGN (Remote Location General Waiting List) - Less chances of confirmation, when user books ticket under RLWL</span>
                         <span>RQWL (Request Waiting List) - Less chances of confirmation</span>
                         <span>RSWL (Roadside Station Waiting List) - Less chances of confirmation</span>
                     </p>
@@ -234,47 +237,65 @@
                     </p>
                     <h5>Passenger and Ticket Details:</h5>
                     <p>
-                    <span>Information about the passenger such as their Name, Age, Gender, and Berth Preference</span>
-                    <span>Information on what seating class or quota the ticket has been booked under</span>
-                    <span>Ticket status showing CNF, RAC, or WL (these terms have been explained in detail below)</span>
-                    <span>It mentions the coach and berth number</span>
+                        <span>Information about the passenger such as their Name, Age, Gender, and Berth Preference</span>
+                        <span>Information on what seating class or quota the ticket has been booked under</span>
+                        <span>Ticket status showing CNF, RAC, or WL (these terms have been explained in detail below)</span>
+                        <span>It mentions the coach and berth number</span>
                     </p>
                     <h5>Payment and Train Details:</h5>
                     <p>
-                        <span>Reveals how much you paid for the ticket including the transaction id and the mode of payment
-                        </span>
-                        <span>It also mentions the train number and name
-                        </span>
-                        <span>The last bit of information will be about your boarding date and time and when the train is going to get you to your destination
+                        <span>Reveals how much you paid for the ticket including the transaction id and the mode of payment</span>
+                        <span>It also mentions the train number and name</span>
+                        <span>The last bit of information will be about your boarding date and time and when the train
+                            is going to get you to your destination
                         </span>
                     </p>
                 </div>
                 <div class="faq">
                     <h3>Modes of PNR enquiry and how does it work? </h3>
                     <p>
-                        You must be wondering what’s the mechanics behind a PNR enquiry; what are all the modes to enquire PNR and how does it work across channels. Well, here is all you need to know about it. In this era, you need not physically visit a railway station to make an enquiry to know the status of your ticket. You can very much do it using modern enquiry modes such as smartphone applications, web portals, via SMS, and final reservation charts of course. Now, the HOW part of it - when you buy a ticket using IRCTC portal or over the counter or via any third-party ticketing platform for that matter, a 10-digit number is generated. This number stores all the information about your train journey at CRIS (Centre Of Railway Information Systems), a database meant for storing passenger details. When you make an online PNR status enquiry, this number fetches the live PNR status from the database. You can reserve up to 6 seats in a single transaction and the online PNR status is going to show the reservation details of 6 of them. You may carry out another transaction to book tickets beyond six, if need be. An SMS service was launched initially by IRCTC to get live PNR status on your mobile. To avail this service all you have to do is, send a message to the service number in the following format: PNR space "Your PNR Number".
+                        You must be wondering what’s the mechanics behind a PNR enquiry; what are all the modes to
+                        enquire PNR and how does it work across channels. Well, here is all you need to know about it.
+                        In this era, you need not physically visit a railway station to make an enquiry to know the
+                        status of your ticket. You can very much do it using modern enquiry modes such as smartphone
+                        applications, web portals, via SMS, and final reservation charts of course. Now, the HOW part of
+                        it - when you buy a ticket using IRCTC portal or over the counter or via any third-party
+                        ticketing platform for that matter, a 10-digit number is generated. This number stores all the
+                        information about your train journey at CRIS (Centre Of Railway Information Systems), a database
+                        meant for storing passenger details. When you make an online PNR status enquiry, this number
+                        fetches the live PNR status from the database. You can reserve up to 6 seats in a single
+                        transaction and the online PNR status is going to show the reservation details of 6 of them. You
+                        may carry out another transaction to book tickets beyond six, if need be. An SMS service was
+                        launched initially by IRCTC to get live PNR status on your mobile. To avail this service all you
+                        have to do is, send a message to the service number in the following format: PNR space "Your PNR
+                        Number".
                     </p>
                 </div>
                 <div class="faq">
                     <h3>Understanding IRCTC PNR Status Abbreviations</h3>
                     <p>
-                        The abbreviations found on a PNR number status page or on a ticket could read alien and you might wonder what do these terms mean? Here is help. Here’s a list of some abbreviated terms, their meaning and full forms that they stand for:
+                        The abbreviations found on a PNR number status page or on a ticket could read alien and you
+                        might wonder what do these terms mean? Here is help. Here’s a list of some abbreviated terms,
+                        their meaning and full forms that they stand for:
                     </p>
                     <p>
                         <span>CNF – If you read this on your live PNR status, you’ve got a ‘Confirmed’ ticket</span>
                         <span>RAC – ‘Reservation Against Cancellation’ meaning that you are likely to get reservation in case someone cancels to travel. You can board the train though</span>
-                        <span>WL – ‘Waiting List’ meaning that you’re lined up to get a confirmed ticket only if one decides to cancel their booking. If the chart has been prepared and your IRCTC PNR status still says WL, you cannot board the train. There are other types of waiting lists as well including GNWL (General Waitlist), TQWL (Tatkal Waitlist), PQWL (Pooled Quota Waitlist), RLWL (Remote Location Waitlist), and NOSB (No Seat Berth)</span>
+                        <span>WL – ‘Waiting List’ meaning that you’re lined up to get a confirmed ticket only if one
+                            decides to cancel their booking. If the chart has been prepared and your IRCTC PNR status
+                            still says WL, you cannot board the train. There are other types of waiting lists as well
+                            including GNWL (General Waitlist), TQWL (Tatkal Waitlist), PQWL (Pooled Quota Waitlist),
+                            RLWL (Remote Location Waitlist), and NOSB (No Seat Berth)</span>
                         <span>CAN – Ticket Cancelled.</span>
                     </p>
                 </div>
             </div>
         </main>
     </section>
-
     <footer>
         <div class="footer-confirm">
             <div class="footer-confirm-title">
-                <img src="images/cnfm-logo.png" >
+                <img src="images/cnfm-logo.png">
                 <p>Confirmtkt.com is official partner of IRCTC to book IRCTC train tickets and Railway train enquiry</p>
             </div>
             <div class="footer-confirm-details">
@@ -327,5 +348,6 @@
             © Copyright @ Le Travenues Technology Ltd. All Rights Reserved.
         </div>
     </footer>
+    <script src="pnr_status.js"></script>
 </body>
 </html>
