--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PNR Status (Check IRCTC PNR Status) - ConfirmTkt </title>
     <link rel="icon" href="images/confirm-favicon.ico">
-    <link rel="stylesheet" href="../../node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="pnr_status.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,7 +13,7 @@
 <body>
     <header>
         <div class="header-logo">
-            <img src="images/cnfm-logo.png" alt="">
+            <img src="images/cnfm-logo.png">
         </div>
         <nav class="header-nav">
             <ol>
@@ -166,11 +164,18 @@
                         During festivals rush like Holi, Durga pooja, Diwali, Chhath, Eid, Christmas, you can explore
                         ConfirmTkt same train alternates feature to find confirm ticket to your destination. After which
                         you can instantly book and check the PNR STATUS on Confirmtkt App or Website.
-                        <span>
-                            We have upgraded our servers to handle the festival rush. So that our users can check
+
+                        <span>We have upgraded our servers to handle the festival rush. So that our users can check
                             their <strong>PNR status</strong> fast and seamless.
                         </span>
                     </p>
+                    <div class="ixigo">
+                        <div>
+                            <img src="images/ixigo.svg">
+                            <p>Keep track of your train ticket's current PNR status with <strong>ixigo</strong>.</p>
+                        </div>
+                        <button class="faq-btn">Click PNR Status</button>
+                    </div>
                 </div>
                 <div class="faq">
                     <h3>What is PNR?</h3>
@@ -212,10 +217,13 @@
                     <h3>PNR Status Confirmation of different waitlist tickets </h3>
                     <p>
                         <span>GNWL (General Waiting List) - Highest confirmation chances</span>
-                        <span>CKWL (Tatkal Waiting List) - GNWL tickets are preferred over Tatkal tickets hence CKWL Confirmation chances are low compared to GNWL</span>
+                        <span>CKWL (Tatkal Waiting List) - GNWL tickets are preferred over Tatkal tickets hence CKWL
+                            Confirmation chances are low compared to GNWL</span>
                         <span>RLWL (Remote Location Waiting List) - Less chances of confirmation</span>
-                        <span>PQWL (Pooled Quota Waiting List) - Less chances of confirmation, quota shared between several stations </span>
-                        <span>RLGN (Remote Location General Waiting List) - Less chances of confirmation, when user books ticket under RLWL</span>
+                        <span>PQWL (Pooled Quota Waiting List) - Less chances of confirmation, quota shared between
+                            several stations </span>
+                        <span>RLGN (Remote Location General Waiting List) - Less chances of confirmation, when user
+                            books ticket under RLWL</span>
                         <span>RQWL (Request Waiting List) - Less chances of confirmation</span>
                         <span>RSWL (Roadside Station Waiting List) - Less chances of confirmation</span>
                     </p>
@@ -234,15 +242,20 @@
                     </p>
                     <h5>Passenger and Ticket Details:</h5>
                     <p>
-                        <span>Information about the passenger such as their Name, Age, Gender, and Berth Preference</span>
+                        <span>Information about the passenger such as their Name, Age, Gender, and Berth
+                            Preference</span>
                         <span>Information on what seating class or quota the ticket has been booked under</span>
-                        <span>Ticket status showing CNF, RAC, or WL (these terms have been explained in detail below)</span>
+                        <span>Ticket status showing CNF, RAC, or WL (these terms have been explained in detail
+                            below)</span>
                         <span>It mentions the coach and berth number</span>
                     </p>
                     <h5>Payment and Train Details:</h5>
                     <p>
-                        <span>Reveals how much you paid for the ticket including the transaction id and the mode of payment</span>
-                        <span>It also mentions the train number and name</span>
+                        <span>Reveals how much you paid for the ticket including the transaction id and the mode of
+                            payment
+                        </span>
+                        <span>It also mentions the train number and name
+                        </span>
                         <span>The last bit of information will be about your boarding date and time and when the train
                             is going to get you to your destination
                         </span>
@@ -277,7 +290,8 @@
                     </p>
                     <p>
                         <span>CNF – If you read this on your live PNR status, you’ve got a ‘Confirmed’ ticket</span>
-                        <span>RAC – ‘Reservation Against Cancellation’ meaning that you are likely to get reservation in case someone cancels to travel. You can board the train though</span>
+                        <span>RAC – ‘Reservation Against Cancellation’ meaning that you are likely to get reservation in
+                            case someone cancels to travel. You can board the train though</span>
                         <span>WL – ‘Waiting List’ meaning that you’re lined up to get a confirmed ticket only if one
                             decides to cancel their booking. If the chart has been prepared and your IRCTC PNR status
                             still says WL, you cannot board the train. There are other types of waiting lists as well
@@ -286,6 +300,139 @@
                         <span>CAN – Ticket Cancelled.</span>
                     </p>
                 </div>
+                <div class="faq">
+                    <h3>For Train Ticket Booking and Live PNR Status Tracking</h3>
+                    <p><a href="" class="faq-a-link">Book IRCTC Ticket on ConfirmTkt</a></p>
+                </div>
+            </div>
+            <div class="route">
+                <h3>Top Train Routes</h3>
+                <div class="route-row">
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Bengaluru</h6>
+                            <span id="route-via">via</span>
+                            <span>Chennai, </span>
+                            <span>Mysore, </span>
+                            <span>Hyderabad, </span>
+                            <span>New Delhi</span>
+                        </div>
+                    </div>
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to New Dehli</h6>
+                            <span id="route-via">via</span>
+                            <span>Patna, </span>
+                            <span>Varanasi, </span>
+                            <span>Mumbai, </span>
+                            <span>Lucknow</span>
+                        </div>
+                    </div>
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Goa</h6>
+                            <span id="route-via">via</span>
+                            <span>Mumbai, </span>
+                            <span>New Delhi, </span>
+                            <span>Bengaluru, </span>
+                            <span>Pune</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="route-row">
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Hyderabad</h6>
+                            <span id="route-via">via</span>
+                            <span>New Delhi, </span>
+                            <span>Mumbai, </span>
+                            <span>Chennai, </span>
+                            <span>Bengaluru, </span>
+                        </div>
+                    </div>
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Mumbai</h6>
+                            <span id="route-via">via</span>
+                            <span>New Delhi, </span>
+                            <span>Pune, </span>
+                            <span>Ahmedabad, </span>
+                            <span>Surat</span>
+                        </div>
+                    </div>
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Mysore</h6>
+                            <span id="route-via">via</span>
+                            <span>Bengaluru, </span>
+                            <span>Chennai, </span>
+                            <span>Hyderabad, </span>
+                            <span>Dharwad</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="route-row">
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Chennai</h6>
+                            <span id="route-via">via</span>
+                            <span>Bengaluru, </span>
+                            <span>Coimbatore, </span>
+                            <span>Madurai, </span>
+                            <span>Salem</span>
+                        </div>
+                    </div>
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Pune</h6>
+                            <span id="route-via">via</span>
+                            <span>Mumbai,</span>
+                            <span>New Delhi</span>
+                            <span>Solapur</span>
+                            <span>Nagpur</span>
+                        </div>
+                    </div>
+                    <div class="route-col">
+                        <img src="images/train_route.png">
+                        <div>
+                            <h6>Trains to Coimbatore</h6>
+                            <span id="route-via">via</span>
+                            <span>Chennai,</span>
+                            <span>Bengaluru, </span>
+                            <span>Salem</span>
+                            <span>Ernakulam</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="explore">
+                <h3>Explore more with ConfirmTkt</h3>
+                <div class="explore-row">
+                    <div>
+                        <img src="images/explore_tickets.svg">
+                        <a href=""><span>&nbsp;IRCTC</span> <span>Tickets</span></a>
+                    </div>
+                    <div>
+                        <img src="images/explore_pnr_status.svg">
+                        <a href=""><span>&nbsp;PNR</span> <span>Status</span></a>
+                    </div>
+                    <div>
+                        <img src="images/explore_running_status.svg">
+                        <a href=""><span>Running</span> <span>&nbsp;Status</span></a>
+                    </div>
+                    <div>
+                        <img src="images/explore_schedule.svg">
+                        <a href=""><span>&nbsp;&nbsp;&nbsp;Train</span> <span>&nbsp;Schedule</span></a>
+                    </div>
+                </div>
             </div>
         </main>
     </section>
@@ -293,7 +440,9 @@
         <div class="footer-confirm">
             <div class="footer-confirm-title">
                 <img src="images/cnfm-logo.png">
-                <p>Confirmtkt.com is official partner of IRCTC to book IRCTC train tickets and Railway train enquiry</p>
+                <p>
+                    Confirmtkt.com is official partner of IRCTC to book IRCTC train tickets and Railway train enquiry
+                </p>
             </div>
             <div class="footer-confirm-details">
                 <div>
@@ -346,8 +495,9 @@
         </div>
     </footer>
     <script src="pnr_status.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 </html>
